--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 
   <div class="jumbotron jumbotron-fluid custom-color">
     <div class="title">
-      <h1>Today's weather</h1>
+      <h1>The current weather in your city</h1>
     </div>
   </div>
 
